# telegram-reminder-bot

./: .gitignore  .readthedocs.yml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
docs/: bot.rst  conf.py  index.rst  installation.rst  models.rst  usage.rst
telegram_reminder_bot/: __init__.py  bot.py  config.example.ini  entrypoint.py  models.py
