[tool.poetry]
name = "telegram_reminder_bot"
version = "0.1.0"
description = "A telegram bot to remind you important stuff"
authors = ["Yoann Piétri <me@nanoy.fr>"]
maintainers = ["Yoann Piétri <me@nanoy.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nanoy42/telegram-reminder-bot"
repository = "https://github.com/nanoy42/telegram-reminder-bot"
documentation = "https://telegram-reminder-bot.readthedocs.io"
keywords = [
    "telegram",
    "bot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Communications :: Chat"
]
include = ["LICENSE", "README.md", "telegram_reminder_bot/config.example.ini"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.11"
python-telegram-bot = "^13.4.1"
python-dateutil = "^2.8.1"
croniter = "^1.1.0"
daemons = {version = "^1.3.2", extras = ["daemon"]}

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
black = "^20.8b1"
rope = "^0.19.0"
coverage = "^5.5"
coveralls = "^3.0.1"
docstr-coverage = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
telegram-reminder-bot = "telegram_reminder_bot.entrypoint:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nanoy42/telegram-reminder-bot/issues"
